# BluieChessBot

./: .clang-format  .gitignore  CMakeLists.txt  ChessBot.py  ChessGUI.py  plan.txt  requirements.txt  run_gui.py  test_analysis_view.py
.antigravitycli/: step_5_centipawn_graph.md  step_6_benchmark.md
engine/: CMakeLists.txt
engine/include/: AttackTables.hpp  Attacks.hpp  Debug.hpp  MagicNumbers.hpp  PreComputation.hpp  Random.hpp  Types.hpp
engine/include/attacks/: AttackTables.hpp  Attacks.hpp  AttacksAPI.hpp  LeaperAttacks.hpp  MagicIndexing.hpp  MagicNumbers.hpp  PreComputation.hpp  SliderMasks.hpp
engine/include/board/: Board.hpp
engine/include/core/: Bitboard.hpp  Debug.hpp  Evaluation.hpp  MoveGen.hpp  Random.hpp  Search.hpp  Types.hpp
engine/include/uci/: UCI.hpp
engine/src/: Attacks.cpp  Bluie.cpp  Board.cpp  MagicNumbers.cpp
engine/src/attacks/: Attacks.cpp  AttacksAPI.cpp  MagicNumbers.cpp
engine/src/board/: Board.cpp
engine/src/core/: Debug.cpp  Evaluation.cpp  MoveGen.cpp  Random.cpp  Search.cpp
engine/src/tools/: Tests.cpp
engine/src/uci/: UCI.cpp
engine/tools/: AttacksOnTheFly.cpp  AttacksOnTheFly.hpp  MagicGenerator.cpp  MagicGenerator.hpp  Random.cpp  Random.hpp  Tests.cpp  Tests.hpp
gui/: ChessGUI.py  board_view.py  constants.py  engine_connector.py  main.py  main_window.py  mock_engine.py
gui-old/views/: settings_view.py  testing_view.py  tools_view.py
include/: Attacks.hpp  Bitboard.hpp  Bluie.hpp  Debug.hpp  MagicNumbers.hpp  PreComputation.hpp  Precomputed.hpp  Types.hpp
src/: Attacks.cpp  Bluie.cpp  Bot.cpp  Debug.cpp  MagicNumbers.cpp  PreComputation.cpp  Precomputed.cpp
(+187 files in other folders)
